syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;

option csharp_namespace = "SecretClient";

service AuthService {
  rpc GetAccessToken(UserCredentials)
      returns (AccessToken);
}

message UserCredentials {
  bytes user_name = 1;
}

message AccessToken {
  bytes jwt = 1;
}
